# rust_multistackvm

./: Cargo.toml  README.md
Documentation/: RELEASE_NOTES_0.20.0.md  RELEASE_NOTES_0.21.0.md  RELEASE_NOTES_0.22.0.md
src/: lib.rs  multistackvm.rs  multistackvm_alias.rs  multistackvm_apply.rs  multistackvm_apply_in.rs  multistackvm_call.rs  multistackvm_call_internal_word.rs  multistackvm_classes.rs  multistackvm_command.rs  multistackvm_inline.rs  multistackvm_lambda_eval.rs  multistackvm_lambda_eval_in.rs  multistackvm_lambdas.rs  multistackvm_methods.rs  multistackvm_object.rs  multistackvm_stacks_stack.rs  multistackvm_to_stack.rs  multistackvm_vars.rs
src/stdlib/: alias.rs  artefacts.rs  artefacts_json.rs  autoadd.rs  bund_object.rs  create_aliases.rs  ctx.rs  execute.rs  helper.rs  mod.rs  print.rs  stacks.rs
src/stdlib/bund_execute/: execute_class.rs  execute_object.rs  mod.rs
src/stdlib/classes/: registry.rs
src/stdlib/convert/: internal.rs  mod.rs
src/stdlib/execute_types/: conditional_through.rs  execute_conditionals.rs  execute_object.rs  mod.rs
tests/: dummy-test.rs  test-class.rs  vm-alias-test.rs  vm-apply-test.rs  vm-convert-test.rs  vm-execute-test.rs  vm-helper-test.rs  vm-json-test.rs  vm-lambda-test.rs  vm-logic-conditional-move-test.rs  vm-logic-do-test.rs  vm-logic-if-test.rs  vm-logic-loop-test.rs  vm-logic-loop.rs  vm-logic-map-test.rs  vm-logic-test.rs  vm-logic-times-test.rs  vm-logic-while-test.rs  vm-math-add-test.rs  vm-math-div-test.rs  vm-math-float-test.rs  vm-math-mul-test.rs  vm-math-sub-test.rs  vm-string-case-test.rs  vm-string-concat-with-space-test.rs  vm-string-format.rs  vm-test-class.rs  vm-test.rs  vm-textbuffer-test.rs  vm-values-test.rs  vm-vars-test.rs
(+42 files in other folders)
