[package]
name = "rust_multistackvm"
version = "0.6.0"
edition = "2021"
description = "Stack-based virtual machine on top of rust_multistack crate"
license-file = "LICENSE"
repository = "https://github.com/vulogov/rust_multistackvm"
categories = ["emulators"]
keywords = ["vm", "stack", "top", "lambda", "execute"]


[dependencies]
compute-pi = "1.0.0"
convert_case = "0.6.0"
easy-error = "1.0.0"
nanoid = "0.4.0"
rust_dynamic = ">=0.20.*"
rust_multistack = ">= 0.23.*"
