[package]
name = "rust_multistackvm"
version = "0.16.0"
edition = "2021"
description = "Stack-based virtual machine on top of rust_multistack crate"
license-file = "LICENSE"
repository = "https://github.com/vulogov/rust_multistackvm"
categories = ["emulators"]
keywords = ["vm", "stack", "top", "lambda", "execute"]


[dependencies]
convert_case = "0.6.0"
easy-error = "1.0.0"
leon = "3.0.1"
nanoid = "0.4.0"
rust_dynamic = ">=0.23.*"
rust_multistack = ">= 0.*.*"
serde = "1.0.214"
serde_json = "1.0.132"
serde_json_path = "0.6.7"
