[package]
name = "rust_multistackvm"
version = "0.28.0"
edition = "2021"
description = "Stack-based virtual machine on top of rust_multistack crate"
license-file = "LICENSE"
repository = "https://github.com/vulogov/rust_multistackvm"
categories = ["emulators"]
keywords = ["vm", "stack", "top", "lambda", "execute"]


[dependencies]
convert_case = "0.6.0"
easy-error = "1.0.0"
jsonpath-rust = "0.7.3"
lazy_static = "1.5.0"
leon = "3.0.1"
log = "0.4.25"
nanoid = "0.4.0"
num = "0.4.3"
rust_dynamic = ">=0.33.*"
rust_multistack = ">= 0.*.*"
serde = "1.0.214"
serde_json = "1.0.132"
time-graph = "0.3.2"
